--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang="ko")
     head
         title #{pageTitle} | Name-Maker
+        link(rel="stylesheet", href="/assets/css/styles.css")
     body 
         block content
     include partials/footer.pug
