--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -2,8 +2,10 @@ doctype html
 html(lang="ko")
     head
         title #{pageTitle} | Name-Maker
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         link(rel="stylesheet", href="/assets/css/styles.css")
     body 
-        block content
-    include partials/footer.pug
+        main
+            block content
+        include partials/footer.pug
     script(src="/assets/js/main.js")
