naming router frontend

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -12,3 +12,4 @@ block content
         div.auth-switch
             span Don't have an account? 
             a(href="/join") Create one now &rarr;
+        a(href="/main") Login without join
