--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -7,11 +7,13 @@
 @import "./components/footer.scss";
 @import "./components/social-login.scss";
 @import "./components/forms.scss";
+@import "./components/buttons.scss";
 
 // Screens
 @import "./screens/home.scss";
 @import "./screens/login.scss";
 @import "./screens/join.scss";
+@import "./screens/main.scss";
 
 // Defaults
 body {
