--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,3 +1,10 @@
 header
-    a(href="#") JOIN
-    a(href="#") LOGIN
+    a(href="/") HOME
+    nav
+        ul 
+            li
+                a(href="/login") Login
+            li
+                a(href="/join") Join
+            li
+                a(href="/about") About
